[ash] Fix app list search behavior

This fixes some regressions which caused Answer Card display handling to
interfere with normal search UI behavior in the app list. Namely,
automatic selection of top non-Answer-Card results, and autocomplete of
text in the input box.

Bug: 902563
Change-Id: Ie45672ae64184d7ed6116752bad1c7a0ca38c646
Reviewed-on: https://chromium-review.googlesource.com/c/1325081
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/master@{#606269}
Former-commit-id: 58cccbbdf0efff8fdb755b0b8868a33820eb5053