ash/app_list/model/search/search_model.h
@@ -54,6 +54,10 @@ class APP_LIST_MODEL_EXPORT SearchModel {
 
   SearchResult* FindSearchResult(const std::string& id);
 
+  // Returns the first available SearchResult which has not been marked as
+  // hidden by its source. Returns null if no such result exists.
+  SearchResult* GetFirstVisibleResult();
+
   // Deletes all search results. This is used in profile switches.
   void DeleteAllResults();
 
